# MODS2025

./: .gitignore  INSTALL.md  README.md  RELEASES.md  readme.md  releases.md
Agents/: README.md
Config/: README.md  isis.ini  isisd.ini  iterm.ini  modsenv.ini  modsheb.ini
GUIs/: README.md
ISIS/: README.md  RELEASE.md  releases.md
IonGauge/: Makefile  readme.md  releases.md
Sandbox/: 00ExpSeq.txt  00IC_Commands.txt  AzCam_IC_Archon_Commands.xlsx  ISIS status parser sandbox.ipynb  README.md  azClient.py  ccdStatus  measQC.py  qcTest.py  startClient  testHEB.ipynb  testStat
Scripts/: acqBinoMODS  ccdTerm  execBinoMODS  imcsTools  imcsTools_old  mods1  mods2  modsAlign_v31.py  modsGUI.sh  modsStatus.pl  modsStatus_old.pl  modsStatus_pwr.pl  modsStatus_v2.pl  modsTerm  modsUI.sh  mtStatus.pl  readme.md  releases.md  start_azcam  start_ccd  start_modsccd  stop_ccd  tmaliases
Utils/: README.md
agw/: MODSAgwTC.c  Makefile.build  README.md  agwinit.c  build  center.c  drift.c  (+5 more)
azcam/azcam-console/: README.md  pyproject.toml  releases.md
azcam/azcam-console/azcam_console/: cli.py  console.py  database_console.py  parameters_console.py  plot.py  server_comm.py  shortcuts.py
azcam/azcam-console/azcam_console/scripts/: __init__.py  get_pressures.py  get_temperatures.py  plot_header_times.py  plot_images.py  plot_log_temps.py  show_sequence_stats.py  test_temperatures.py  test_wavelengths.py
azcam/azcam-console/azcam_console/testers/: basetester.py  defects.py  detchar.py  fe55.py  gainmap.py  linearity.py  ramp.py  report.py  testers.py
azcam/azcam-console/azcam_console/tools/: exposure.py  instrument.py  telescope.py  tools.py
azcam/azcam-console/docs/: mkdocs.yml  requirements.txt
azcam/azcam-console/docs/docs/autocode/: focus_console.md
azcam/azcam-console/support/: set_environs.bat  set_environs.sh  start_console_example.py
azcam/azcam-mods/: README.md  pyproject.toml  readme.md~  releases.md
azcam/azcam-mods/azcam_mods/: __init__.py  console.py  detector_mods.py  instrument_mods.py  mods.py  server.py  start_azcamtool.py  telescope_lbt.py  tempcon_mods.py
azcam/azcam-mods/support/: parameters_monitor_mods.ini  setup_time_sync.ps1  start_console_mods.py  start_monitor_mods.py  start_server_mods.py
(+1885 files in other folders)
