[project]
name = "azcam-mods"
version = "25.0.2"
description = "AzCam extension for LBTO MODS camera system"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [
    {name="Michael Lesser",email="mlesser@arizona.edu"},
    {name="Rick Pogge",email="pogge.1@osu.edu"}
]
dependencies = ["ipython", "rich", "azcam"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-mods/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_mods"
