[project]
name = "azcam-mods"
version = "1.0.5"
description = "azcam extension for the LBTO MODS camera system"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [
    {name="Michael Lesser",email="mlesser@arizona.edu"},
    {name="Rick Pogge",email="pogge.1@osu.edu"}
]
dependencies = ["ipython", "rich", "azcam"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/rwpogge/MODS2025"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_mods"
